@@ -19,3 +19,4 @@ void set_fuzzy_mode( FUZZY_INDEX *fi, char *param );
 void get_fuzzy_mode( FUZZY_INDEX *fi, int fuzzy );
 void free_fuzzy_mode( FUZZY_INDEX *fi );
 int stemmer_applied( INDEXDATAHEADER *header );
+void dump_fuzzy_list( void );
